# O.S.S.O

./: .gitignore  README.md
OSSO/: CMakeLists.txt  README.md
OSSO/resources/: UI.fbp  resources.xrc  splashwindow.xrc
OSSO/source/: login.cpp  login.h  main.cpp  main.h
client/: OSSO.slnx
client/src/OSSO.Client/: App.axaml  App.axaml.cs  OSSO.Client.csproj  Program.cs  README.md  ViewLocator.cs  app.manifest  fix_view-py  fix_view.py
client/src/OSSO.Client.Tests/: UnitTest1.cs
client/src/OSSO.Client/Models/: User.cs
client/src/OSSO.Client/ViewModels/: LoginViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
client/src/OSSO.Client/Views/: MainWindow.axaml  MainWindow.axaml.cs
main/: OSSO.slnx
main/OSSO/: App.axaml  App.axaml.cs  ViewLocator.cs
main/OSSO.Android/: Application.cs  MainActivity.cs  OSSO.Android.csproj
main/OSSO.Android/Properties/: AndroidManifest.xml
main/OSSO.Browser/: OSSO.Browser.csproj  Program.cs
main/OSSO.Browser/Properties/: launchSettings.json
main/OSSO.Browser/wwwroot/: index.html
main/OSSO.Desktop/: OSSO.Desktop.csproj  Program.cs  app.manifest
main/OSSO.iOS/: AppDelegate.cs  Info.plist  Main.cs  OSSO.iOS.csproj
main/OSSO.iOS/Resources/: LaunchScreen.xib
main/OSSO/ViewModels/: MainViewModel.cs  ViewModelBase.cs
main/OSSO/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
server/: .env  fix_auth.py  main.py  requirements.txt  setup_files.py  setup_routes.py  test_db.py
server/app/core/: config.py
server/app/schemas/: auth.py
server/app/services/: auth_service.py
(+6 files in other folders)
